# yolo_inference_ros

./: README.md  package.xml  requirements.txt  setup.cfg  setup.py
config/: botsort.yaml  bytetrack.yaml
yolo_inference_ros/: depth_processor.py  yolo_inference_node.py
